syntax = "proto3";

option go_package = "github.com/Hammond95/FattarielloDB/cluster";
option java_multiple_files = true;
option java_package = "dev.deluca.martin.fattariellodb";
option java_outer_classname = "FattarielloDB";

package fattariellodb.cluster;

// Interface exported by the server.
service FattarielloDB {
  // A simple RPC.
  //
  // Obtains the Node Id
  rpc getId(Request) returns (Node) {}

  // Obtains the Node Status
  rpc getStatus(Request) returns (Node) {}

}

message Request {}

message Node {
  string NodeID = 1;
  enum NodeState {
    DEAD = 0;
    PENDING = 1;
    JOINING = 2;
    RUNNING = 3;
    LEAVING = 4;
  }
  NodeState NodeStatus = 2;
	string NodeAddress = 3;
	repeated string PeersID = 4;
	repeated string PeersAddresses = 5;
}

