syntax = "proto3";

package proto;

option go_package = "github.com/Hammond95/FattarielloDB/proto";
//option java_multiple_files = true;
//option java_package = "dev.deluca.martin.fattariellodb";
//option java_outer_classname = "FattarielloDB";

message EmptyRequest {}

message AckResponse {
  string AckMessage = 1;
}

message SendMessageRequest {
  bytes Message = 1;
  string DestinationNodeAddress = 2;
  //oneof Destination {
  //  string NodeID = 2;
  //  // TODO: Think if there is a case in which we 
  //  // could have different nodes at the same address.
  //  string NodeAddress = 3;
  //}
}

message ReceiveMessageRequest {
  string SenderNodeID = 1;
  string SenderNodeAddress = 2;
  bytes Message = 3;
}

message NodeInfos {
  string NodeID = 1;
  enum NodeState {
    STARTING = 0;
    PENDING = 1;
    JOINING = 2;
    RUNNING = 3;
    LEAVING = 4;
    DEAD = 5;
  }
  NodeState NodeStatus = 2;
  string NodeAddress = 3;
  repeated string PeersID = 4;
  repeated string PeersAddresses = 5;
}

// Interface exported by the server.
service Node {
  // Returns the Node Infos
  rpc getInfo(EmptyRequest) returns (NodeInfos);

  rpc sendMessage(SendMessageRequest) returns (AckResponse);

  rpc receiveMessage(ReceiveMessageRequest) returns (AckResponse);

  // Obtains the Node Status
  //rpc getStatus(Request) returns (Node) {}
}
